# ai-paper-gen

./: .gitignore  README.md  main.py  pyproject.toml  util.py
examples/paper_template/: format_paragraph.jinja  format_paragraphs.jinja  format_sentence.jinja  root.jinja
snippets/python-mode/: pair  paper-writer  quick-template
templates/: annotation_system.jinja  annotation_user.jinja  conclusions_system.jinja  conclusions_user.jinja  goal_system.jinja  keywords_system.jinja  plan_system.jinja  plan_user.jinja  relevance_system.jinja  relevance_user.jinja  translate_system.jinja  udc_system.jinja  udc_user.jinja  write_paragraph_user.jinja  write_section_user.jinja  write_system.jinja
templates/util/: format_paragraph.jinja  format_paragraphs.jinja  format_sentence.jinja  relevant_information.jinja  working_with_sources.jinja
workflows/: full.py  indexer.py  paper_translator.py  paper_writer.py  planner.py  related_work_finder.py  test.py  test2.py
