[project]
name = "ai-paper-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix>=8.19.1",
    "arize-phoenix-otel>=0.9.0",
    "asyncio>=3.4.3",
    "bs4>=0.0.2",
    "click>=8.1.8",
    "httpx==0.27.2",
    "llama-index-core>=0.12.25",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-llms-openai>=0.3.25",
    "llama-index-readers-file>=0.4.7",
    "llama-index-utils-workflow>=0.3.0",
    "mlflow>=2.21.2",
    "openinference-instrumentation-llama-index>=3.3.3",
    "requests>=2.32.3",
    "scholarly>=1.7.11",
    "semanticscholar>=0.10.0",
    "slugify>=0.0.1",
    "traceloop-sdk>=0.39.0",
]
